--- a/case01/assets/css/style.css
+++ b/case01/assets/css/style.css
@@ -13,3 +13,18 @@ h1 {
     text-align: center;
     color: red;
 }
+#btns{
+    margin-left: 45vw;
+    margin-top: 5vh;
+}
+#btns>button:first-child{
+    background: greenyellow;
+    border: none;
+    padding: 6px;
+}
+#btns>button:last-child{
+    background: red;
+    color: white;
+    border: none;
+    padding: 6px;
+}
